# SPDC_Simulation

./: .clangd  CMakeComands.txt  CMakeLists.txt  CMakePresets.json  spdc.cpp  visualize.py
fftw-3.3.10/: Makefile  config.h  config.status  libfftw3f.la  libtool
fftw-3.3.10/.libs/: libfftw3f.lai
fftw-3.3.10/api/: Makefile
fftw-3.3.10/api/.deps/: apiplan.Plo  configure.Plo  execute-dft-c2r.Plo  execute-dft-r2c.Plo  execute-dft.Plo  execute-r2r.Plo  execute-split-dft-c2r.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  execute.Plo  export-wisdom-to-file.Plo  export-wisdom-to-string.Plo  export-wisdom.Plo  f77api.Plo  flops.Plo  forget-wisdom.Plo  import-system-wisdom.Plo  import-wisdom-from-file.Plo  import-wisdom-from-string.Plo  import-wisdom.Plo  malloc.Plo  map-r2r-kind.Plo  mapflags.Plo  mkprinter-file.Plo  mkprinter-str.Plo  mktensor-iodims.Plo  mktensor-iodims64.Plo  mktensor-rowmajor.Plo  plan-dft-1d.Plo  plan-dft-2d.Plo  plan-dft-3d.Plo  plan-dft-c2r-1d.Plo  plan-dft-c2r-2d.Plo  plan-dft-c2r-3d.Plo  plan-dft-c2r.Plo  plan-dft-r2c-1d.Plo  plan-dft-r2c-2d.Plo  plan-dft-r2c-3d.Plo  plan-dft-r2c.Plo  plan-dft.Plo  (+26 more)
fftw-3.3.10/api/.libs/: libapi.la
fftw-3.3.10/dft/: Makefile  libdft.la
fftw-3.3.10/dft/.deps/: bluestein.Plo  buffered.Plo  conf.Plo  ct.Plo  dftw-direct.Plo  dftw-directsq.Plo  dftw-generic.Plo  dftw-genericbuf.Plo  direct.Plo  generic.Plo  indirect-transpose.Plo  indirect.Plo  kdft-dif.Plo  kdft-difsq.Plo  kdft-dit.Plo  kdft.Plo  nop.Plo  plan.Plo  problem.Plo  rader.Plo  rank-geq2.Plo  solve.Plo  vrank-geq1.Plo  zero.Plo
fftw-3.3.10/dft/scalar/: Makefile
fftw-3.3.10/dft/simd/: Makefile
fftw-3.3.10/doc/: Makefile
fftw-3.3.10/doc/FAQ/: Makefile
fftw-3.3.10/genfft/: Makefile
fftw-3.3.10/kernel/: Makefile
fftw-3.3.10/kernel/.deps/: align.Plo  alloc.Plo  assert.Plo  awake.Plo  buffered.Plo  cpy1d.Plo  (+37 more)
fftw-3.3.10/libbench2/: Makefile
fftw-3.3.10/m4/: Makefile
fftw-3.3.10/mpi/: Makefile
fftw-3.3.10/rdft/: Makefile
fftw-3.3.10/reodft/: Makefile  libreodft.la
fftw-3.3.10/simd-support/: Makefile  libsimd_support.la
fftw-3.3.10/support/: Makefile
fftw-3.3.10/tests/: Makefile
fftw-3.3.10/threads/: Makefile  libfftw3f_threads_la-api.lo  libfftw3f_threads_la-conf.lo  libfftw3f_threads_la-ct.lo  libfftw3f_threads_la-dft-vrank-geq1.lo  libfftw3f_threads_la-f77api.lo  libfftw3f_threads_la-hc2hc.lo  libfftw3f_threads_la-rdft-vrank-geq1.lo  libfftw3f_threads_la-threads.lo  libfftw3f_threads_la-vrank-geq1-rdft2.lo
fftw-3.3.10/tools/: Makefile
(+382 files in other folders)
